// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [],
      "result": Array [
        Object {
          "apiVersion": "mcm.ibm.com/v1alpha1",
          "kind": "Application",
          "metadata": Object {
            "annotations": Object {
              "mcm.ibm.com/user-group": "c3lzdGVtOmF1dGhlbnRpY2F0ZWQ=",
              "mcm.ibm.com/user-identity": "aHR0cHM6Ly9teWNsdXN0ZXIuaWNwOjk0NDMvb2lkYy9lbmRwb2ludC9PUCNhZG1pbg==",
            },
            "creationTimestamp": "2018-09-07T14:19:02Z",
            "labels": Object {
              "deployable": "deployable01",
              "hcmapp": "testapp",
            },
            "name": "testapp",
            "namespace": "default",
            "resourceVersion": "59905",
            "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/default/applications/testapp",
            "uid": "f849165a-b2a8-11e8-bd43-b69970856045",
          },
          "spec": Object {
            "componentKinds": Array [
              Object {
                "group": "mcm.ibm.com/v1alpha1",
                "kind": "PlacementPolicy",
              },
              Object {
                "group": "mcm.ibm.com/v1alpha1",
                "kind": "Deployable",
              },
            ],
            "descriptor": Object {},
            "selector": Object {
              "matchLabels": Object {
                "hcmapp": "testapp",
              },
            },
          },
          "status": Object {
            "Deployable": Object {
              "metadata": Object {
                "creationTimestamp": null,
              },
              "spec": Object {
                "deployer": Object {
                  "helm": Object {},
                },
              },
              "status": Object {},
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Get Resource Locally 1`] = `
Object {
  "data": Object {
    "getResource": Object {
      "getResource": Object {
        "apiVersion": "v1",
        "kind": "Pod",
        "metadata": Object {
          "annotations": Object {
            "kubernetes.io/psp": "ibm-privileged-psp",
            "productID": "none",
            "productName": "node-exporter",
            "productVersion": "v0.16.0",
            "scheduler.alpha.kubernetes.io/critical-pod": "",
          },
          "creationTimestamp": "2019-05-07T15:35:04Z",
          "generateName": "monitoring-prometheus-nodeexporter-",
          "labels": Object {
            "app": "monitoring-prometheus",
            "chart": "ibm-icpmonitoring",
            "component": "nodeexporter",
            "controller-revision-hash": "79d7d4c8fc",
            "heritage": "Tiller",
            "pod-template-generation": "1",
            "release": "monitoring",
            "role": "nodeexporter",
          },
          "name": "monitoring-prometheus-nodeexporter-n6h9b",
          "namespace": "kube-system",
          "ownerReferences": Array [
            Object {
              "apiVersion": "apps/v1",
              "blockOwnerDeletion": true,
              "controller": true,
              "kind": "DaemonSet",
              "name": "monitoring-prometheus-nodeexporter",
              "uid": "afa50102-70dd-11e9-865a-00000a15079c",
            },
          ],
          "resourceVersion": "3839",
          "selfLink": "/api/v1/namespaces/kube-system/pods/monitoring-prometheus-nodeexporter-n6h9b",
          "uid": "afaa79bb-70dd-11e9-865a-00000a15079c",
        },
        "spec": Object {
          "affinity": Object {
            "nodeAffinity": Object {
              "requiredDuringSchedulingIgnoredDuringExecution": Object {
                "nodeSelectorTerms": Array [
                  Object {
                    "matchFields": Array [
                      Object {
                        "key": "metadata.name",
                        "operator": "In",
                        "values": Array [
                          "10.21.7.156",
                        ],
                      },
                    ],
                  },
                ],
              },
            },
          },
          "containers": Array [
            Object {
              "args": Array [
                "--path.procfs=/host/proc",
                "--path.sysfs=/host/sys",
                "--web.listen-address=0.0.0.0:9100",
              ],
              "image": "some-server.com/node-exporter:v0.16.0-f3",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": Object {
                "failureThreshold": 3,
                "httpGet": Object {
                  "path": "/metrics",
                  "port": 9100,
                  "scheme": "HTTP",
                },
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 30,
              },
              "name": "nodeexporter",
              "readinessProbe": Object {
                "failureThreshold": 3,
                "httpGet": Object {
                  "path": "/metrics",
                  "port": 9100,
                  "scheme": "HTTP",
                },
                "initialDelaySeconds": 30,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 30,
              },
              "resources": Object {
                "limits": Object {
                  "memory": "256Mi",
                },
                "requests": Object {
                  "memory": "64Mi",
                },
              },
              "securityContext": Object {
                "procMount": "Default",
                "runAsUser": 65534,
              },
              "terminationMessagePath": "/dev/termination-log",
              "terminationMessagePolicy": "File",
              "volumeMounts": Array [
                Object {
                  "mountPath": "/host/proc",
                  "name": "proc",
                  "readOnly": true,
                },
                Object {
                  "mountPath": "/host/sys",
                  "name": "sys",
                  "readOnly": true,
                },
                Object {
                  "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                  "name": "default-token-vk7mp",
                  "readOnly": true,
                },
              ],
            },
            Object {
              "command": Array [
                "/opt/ibm/router/entry/entrypoint.sh",
              ],
              "env": Array [
                Object {
                  "name": "NODE_NAME",
                  "valueFrom": Object {
                    "fieldRef": Object {
                      "apiVersion": "v1",
                      "fieldPath": "spec.nodeName",
                    },
                  },
                },
              ],
              "image": "some-server.com/icp-management-ingress:latest",
              "imagePullPolicy": "IfNotPresent",
              "name": "router",
              "resources": Object {
                "limits": Object {
                  "memory": "256Mi",
                },
                "requests": Object {
                  "memory": "64Mi",
                },
              },
              "terminationMessagePath": "/dev/termination-log",
              "terminationMessagePolicy": "File",
              "volumeMounts": Array [
                Object {
                  "mountPath": "/opt/ibm/router/conf",
                  "name": "router-config",
                },
                Object {
                  "mountPath": "/opt/ibm/router/entry",
                  "name": "router-entry",
                },
                Object {
                  "mountPath": "/opt/ibm/router/caCerts",
                  "name": "monitoring-ca-certs",
                },
                Object {
                  "mountPath": "/opt/ibm/router/certs",
                  "name": "monitoring-certs",
                },
                Object {
                  "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                  "name": "default-token-vk7mp",
                  "readOnly": true,
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "enableServiceLinks": true,
          "hostNetwork": true,
          "hostPID": true,
          "imagePullSecrets": Array [
            Object {
              "name": "infra-registry-key",
            },
          ],
          "nodeName": "10.21.7.156",
          "priority": 2000000000,
          "priorityClassName": "system-cluster-critical",
          "restartPolicy": "Always",
          "schedulerName": "default-scheduler",
          "securityContext": Object {},
          "serviceAccount": "default",
          "serviceAccountName": "default",
          "terminationGracePeriodSeconds": 30,
          "tolerations": Array [
            Object {
              "effect": "NoSchedule",
              "key": "node.kubernetes.io/memory-pressure",
              "operator": "Exists",
            },
            Object {
              "effect": "NoSchedule",
              "key": "node.kubernetes.io/unschedulable",
              "operator": "Exists",
            },
            Object {
              "effect": "NoSchedule",
              "key": "node.kubernetes.io/network-unavailable",
              "operator": "Exists",
            },
            Object {
              "effect": "NoSchedule",
              "key": "dedicated",
              "operator": "Exists",
            },
            Object {
              "effect": "NoExecute",
              "key": "node.kubernetes.io/not-ready",
              "operator": "Exists",
            },
            Object {
              "effect": "NoExecute",
              "key": "node.kubernetes.io/unreachable",
              "operator": "Exists",
            },
            Object {
              "effect": "NoSchedule",
              "key": "node.kubernetes.io/disk-pressure",
              "operator": "Exists",
            },
          ],
          "volumes": Array [
            Object {
              "hostPath": Object {
                "path": "/proc",
                "type": "",
              },
              "name": "proc",
            },
            Object {
              "hostPath": Object {
                "path": "/sys",
                "type": "",
              },
              "name": "sys",
            },
            Object {
              "configMap": Object {
                "defaultMode": 420,
                "items": Array [
                  Object {
                    "key": "nodeexporter.nginx.conf",
                    "path": "nginx.conf",
                  },
                ],
                "name": "monitoring-prometheus-exporter-router-nginx-config",
              },
              "name": "router-config",
            },
            Object {
              "configMap": Object {
                "defaultMode": 484,
                "name": "monitoring-monitoring-router-entry-config",
              },
              "name": "router-entry",
            },
            Object {
              "name": "monitoring-ca-certs",
              "secret": Object {
                "defaultMode": 420,
                "secretName": "cluster-ca-cert",
              },
            },
            Object {
              "name": "monitoring-certs",
              "secret": Object {
                "defaultMode": 420,
                "secretName": "monitoring-monitoring-exporter-certs",
              },
            },
            Object {
              "name": "default-token-vk7mp",
              "secret": Object {
                "defaultMode": 420,
                "secretName": "default-token-vk7mp",
              },
            },
          ],
        },
        "status": Object {
          "conditions": Array [
            Object {
              "lastProbeTime": null,
              "lastTransitionTime": "2019-05-07T15:35:04Z",
              "status": "True",
              "type": "Initialized",
            },
            Object {
              "lastProbeTime": null,
              "lastTransitionTime": "2019-05-07T15:36:04Z",
              "status": "True",
              "type": "Ready",
            },
            Object {
              "lastProbeTime": null,
              "lastTransitionTime": "2019-05-07T15:36:04Z",
              "status": "True",
              "type": "ContainersReady",
            },
            Object {
              "lastProbeTime": null,
              "lastTransitionTime": "2019-05-07T15:35:04Z",
              "status": "True",
              "type": "PodScheduled",
            },
          ],
          "containerStatuses": Array [
            Object {
              "containerID": "docker://abc123",
              "image": "some-server.com/node-exporter:v0.16.0-f3",
              "imageID": "docker-pullable://some-server.com/node-exporter@sha256:abc123",
              "lastState": Object {},
              "name": "nodeexporter",
              "ready": true,
              "restartCount": 0,
              "state": Object {
                "running": Object {
                  "startedAt": "2019-05-07T15:35:33Z",
                },
              },
            },
            Object {
              "containerID": "docker://abc123",
              "image": "some-server.com/icp-management-ingress:latest",
              "imageID": "docker-pullable://some-server.com/icp-management-ingress@sha256:abc123",
              "lastState": Object {},
              "name": "router",
              "ready": true,
              "restartCount": 0,
              "state": Object {
                "running": Object {
                  "startedAt": "2019-05-07T15:35:34Z",
                },
              },
            },
          ],
          "hostIP": "10.21.7.156",
          "phase": "Running",
          "podIP": "10.21.7.156",
          "qosClass": "Burstable",
          "startTime": "2019-05-07T15:35:04Z",
        },
      },
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Cluster Labels 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": Object {
      "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
      "kind": "Compliance",
      "metadata": Object {
        "annotations": Object {
          "seed-generation": "1",
        },
        "creationTimestamp": "2019-01-02T19:42:12Z",
        "finalizers": Array [
          "finalizer.mcm.ibm.com",
        ],
        "generation": 1,
        "name": "compliance-all",
        "namespace": "mcm",
        "resourceVersion": "5533372",
        "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-all",
        "uid": "7fc1f4a2-0ec6-11e9-8fd0-0ebe277f4f9c",
      },
      "spec": Object {
        "runtime-rules": Array [
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "kind": "Policy",
            "metadata": Object {
              "creationTimestamp": null,
              "labels": Object {
                "hipaa": "true",
              },
              "name": "policy-all",
            },
            "spec": Object {
              "complianceType": "musthave",
              "namespaces": Object {
                "exclude": Array [
                  "kube*",
                ],
                "include": Array [
                  "default",
                ],
              },
              "object-templates": Array [
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "Pod",
                    "metadata": Object {
                      "name": "nginx",
                    },
                    "spec": Object {
                      "containers": Array [
                        Object {
                          "image": "nginx:1.7.9",
                          "name": "nginx",
                          "ports": Array [
                            Object {
                              "containerPort": 80,
                            },
                          ],
                        },
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "Namespace",
                    "metadata": Object {
                      "labels": Object {
                        "name": "production",
                      },
                      "name": "production",
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "rbac.authorization.k8s.io/v1",
                    "kind": "RoleBinding",
                    "metadata": Object {
                      "name": "operate-pods-rolebinding",
                      "namespace": "default",
                    },
                    "roleRef": Object {
                      "apiGroup": "rbac.authorization.k8s.io",
                      "kind": "Role",
                      "name": "operator",
                    },
                    "subjects": Array [
                      Object {
                        "apiGroup": "rbac.authorization.k8s.io",
                        "kind": "User",
                        "name": "jane",
                      },
                    ],
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "policy/v1beta1",
                    "kind": "PodSecurityPolicy",
                    "metadata": Object {
                      "annotations": Object {
                        "seccomp.security.alpha.kubernetes.io/allowedProfileNames": "*",
                      },
                      "name": "privileged-mcm",
                    },
                    "spec": Object {
                      "allowPrivilegeEscalation": true,
                      "allowedCapabilities": Array [
                        "*",
                      ],
                      "fsGroup": Object {
                        "rule": "RunAsAny",
                      },
                      "hostIPC": true,
                      "hostNetwork": true,
                      "hostPID": true,
                      "hostPorts": Array [
                        Object {
                          "max": 65535,
                          "min": 0,
                        },
                      ],
                      "privileged": true,
                      "runAsUser": Object {
                        "rule": "RunAsAny",
                      },
                      "seLinux": Object {
                        "rule": "RunAsAny",
                      },
                      "supplementalGroups": Object {
                        "rule": "RunAsAny",
                      },
                      "volumes": Array [
                        "*",
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "networking.k8s.io/v1",
                    "kind": "NetworkPolicy",
                    "metadata": Object {
                      "name": "allow-all-mcm",
                    },
                    "spec": Object {
                      "ingress": Array [
                        Object {},
                      ],
                      "podSelector": Object {},
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "LimitRange",
                    "metadata": Object {
                      "name": "mem-limit-range",
                    },
                    "spec": Object {
                      "limits": Array [
                        Object {
                          "default": Object {
                            "memory": "512Mi",
                          },
                          "defaultRequest": Object {
                            "memory": "256Mi",
                          },
                          "type": "Container",
                        },
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
              ],
              "remediationAction": "enforce",
              "role-templates": Array [
                Object {
                  "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                  "complianceType": "musthave",
                  "metadata": Object {
                    "creationTimestamp": null,
                    "name": "operator-role",
                  },
                  "rules": Array [
                    Object {
                      "complianceType": "musthave",
                      "policyRule": Object {
                        "apiGroups": Array [
                          "extensions",
                          "apps",
                        ],
                        "resources": Array [
                          "deployments",
                        ],
                        "verbs": Array [
                          "get",
                          "list",
                          "watch",
                          "create",
                          "delete",
                          "patch",
                        ],
                      },
                    },
                  ],
                  "selector": Object {
                    "matchLabels": Object {
                      "hipaa": "true",
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
              ],
            },
            "status": Object {},
          },
        ],
      },
      "status": Object {
        "placementBindings": Array [
          "binding-xz",
        ],
        "placementPolicies": Array [
          "placement-xz",
        ],
        "status": Object {
          "cluster1": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster1",
            "compliant": "Compliant",
          },
          "cluster2": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster2",
            "compliant": "Compliant",
          },
          "cluster3": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster3",
            "compliant": "Compliant",
          },
        },
      },
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Local Resource 1`] = `
Object {
  "data": Object {
    "updateResource": Object {
      "data": Object {
        "updateResource": Object {
          "apiVersion": "v1",
          "kind": "Namespace",
          "metadata": Object {
            "creationTimestamp": "2019-05-07T15:24:29Z",
            "labels": Object {
              "icp": "system",
              "test": "test",
            },
            "name": "klusterlet",
            "resourceVersion": "2120711",
            "selfLink": "/api/v1/namespaces/klusterlet",
            "uid": "34ddc94d-70dc-11e9-865a-00000a15079c",
          },
          "spec": Object {
            "finalizers": Array [
              "kubernetes",
            ],
          },
          "status": Object {
            "phase": "Active",
          },
        },
      },
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Remote Resource 1`] = `
Object {
  "data": Object {
    "updateResource": "platform-auto-service-update-work-1234",
  },
}
`;

exports[`Generic Resources Correctly Resolves update Compliance Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": Object {
      "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
      "items": Array [
        Object {
          "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
          "kind": "Compliance",
          "metadata": Object {
            "annotations": Object {
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-01-02T19:42:12Z",
            "finalizers": Array [
              "finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "name": "compliance-xz",
            "namespace": "mcm",
            "resourceVersion": "5533372",
            "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-xz",
            "uid": "7fc1f4a2-0ec6-11e9-8fd0-0ebe277f4f9c",
          },
          "spec": Object {
            "runtime-rules": Array [
              Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "kind": "Policy",
                "metadata": Object {
                  "creationTimestamp": null,
                  "labels": Object {
                    "hipaa": "true",
                  },
                  "name": "policy-all",
                },
                "spec": Object {
                  "complianceType": "musthave",
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "object-templates": Array [
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Pod",
                        "metadata": Object {
                          "name": "nginx",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "image": "nginx:1.7.9",
                              "name": "nginx",
                              "ports": Array [
                                Object {
                                  "containerPort": 80,
                                },
                              ],
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Namespace",
                        "metadata": Object {
                          "labels": Object {
                            "name": "production",
                          },
                          "name": "production",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "rbac.authorization.k8s.io/v1",
                        "kind": "RoleBinding",
                        "metadata": Object {
                          "name": "operate-pods-rolebinding",
                          "namespace": "default",
                        },
                        "roleRef": Object {
                          "apiGroup": "rbac.authorization.k8s.io",
                          "kind": "Role",
                          "name": "operator",
                        },
                        "subjects": Array [
                          Object {
                            "apiGroup": "rbac.authorization.k8s.io",
                            "kind": "User",
                            "name": "jane",
                          },
                        ],
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "policy/v1beta1",
                        "kind": "PodSecurityPolicy",
                        "metadata": Object {
                          "annotations": Object {
                            "seccomp.security.alpha.kubernetes.io/allowedProfileNames": "*",
                          },
                          "name": "privileged-mcm",
                        },
                        "spec": Object {
                          "allowPrivilegeEscalation": true,
                          "allowedCapabilities": Array [
                            "*",
                          ],
                          "fsGroup": Object {
                            "rule": "RunAsAny",
                          },
                          "hostIPC": true,
                          "hostNetwork": true,
                          "hostPID": true,
                          "hostPorts": Array [
                            Object {
                              "max": 65535,
                              "min": 0,
                            },
                          ],
                          "privileged": true,
                          "runAsUser": Object {
                            "rule": "RunAsAny",
                          },
                          "seLinux": Object {
                            "rule": "RunAsAny",
                          },
                          "supplementalGroups": Object {
                            "rule": "RunAsAny",
                          },
                          "volumes": Array [
                            "*",
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "networking.k8s.io/v1",
                        "kind": "NetworkPolicy",
                        "metadata": Object {
                          "name": "allow-all-mcm",
                        },
                        "spec": Object {
                          "ingress": Array [
                            Object {},
                          ],
                          "podSelector": Object {},
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "LimitRange",
                        "metadata": Object {
                          "name": "mem-limit-range",
                        },
                        "spec": Object {
                          "limits": Array [
                            Object {
                              "default": Object {
                                "memory": "512Mi",
                              },
                              "defaultRequest": Object {
                                "memory": "256Mi",
                              },
                              "type": "Container",
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                  "remediationAction": "enforce",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "metadata": Object {
                        "creationTimestamp": null,
                        "name": "operator-role",
                      },
                      "rules": Array [
                        Object {
                          "complianceType": "musthave",
                          "policyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "create",
                              "delete",
                              "patch",
                            ],
                          },
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "hipaa": "true",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                },
                "status": Object {},
              },
            ],
          },
          "status": Object {
            "placementBindings": Array [
              "binding-xz",
            ],
            "placementPolicies": Array [
              "placement-xz",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster1",
                "compliant": "Compliant",
              },
              "cluster2": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster2",
                "compliant": "Compliant",
              },
              "cluster3": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster3",
                "compliant": "Compliant",
              },
            },
          },
        },
      ],
      "kind": "ComplianceList",
      "metadata": Object {
        "continue": "",
        "resourceVersion": "4401288",
        "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances",
      },
    },
  },
}
`;

exports[`Generic Resources Should Report Error While Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [
        Object {
          "message": "Namespace not found in the template",
        },
      ],
    },
  },
}
`;
